<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat app:key="mirror" app:persistent="false" app:title="@string/pref_mirror_title"/>
    <SwitchPreferenceCompat app:key="auto_start_mirror" app:persistent="true" app:summary="@string/pref_auto_start_summary" app:title="@string/pref_auto_start_title"/>
    <SwitchPreferenceCompat app:key="keep_awake" app:persistent="true" app:summary="@string/pref_keep_awake_summary" app:title="@string/pref_keep_awake_title"/>
    <SwitchPreferenceCompat app:defaultValue="true" app:key="stop_on_disconnect" app:persistent="true" app:summary="@string/pref_stop_on_disconnect_summary" app:title="@string/pref_stop_on_disconnect_title"/>
    <SwitchPreferenceCompat app:defaultValue="false" app:key="auto_dim" app:persistent="true" app:summary="@string/pref_auto_dim_summary" app:title="@string/pref_auto_dim_title"/>
    <ListPreference app:defaultValue="30" app:dependency="auto_dim" app:entries="@array/auto_dim_delay_entries" app:entryValues="@array/auto_dim_delay_values" app:key="auto_dim_delay" app:persistent="true" app:title="@string/pref_auto_dim_delay_title" app:useSimpleSummaryProvider="true"/>
    <SwitchPreferenceCompat app:defaultValue="false" app:key="force_landscape" app:persistent="true" app:summary="@string/pref_force_landscape_summary" app:title="@string/pref_force_landscape_title"/>
    <Preference app:key="auto_launch_package" app:persistent="false" app:title="@string/pref_auto_launch_title"/>
    <Preference app:key="launch_shortcuts" app:persistent="false" app:summary="@string/pref_launch_shortcuts_summary" app:title="@string/pref_launch_shortcuts_title"/>
    <Preference app:key="advanced" app:persistent="false" app:summary="@string/pref_advanced_summary" app:title="@string/pref_advanced_title"/>
    <Preference app:isPreferenceVisible="false" app:key="root_features" app:persistent="false" app:summary="@string/pref_root_summary" app:title="@string/pref_root_title"/>
    <PreferenceCategory app:key="category_permissions" app:title="@string/pref_category_permissions">
        <Preference app:key="notification_access" app:persistent="false" app:title="@string/pref_notification_access_title"/>
        <Preference app:key="overlay_access" app:persistent="false" app:title="@string/pref_overlay_title"/>
        <Preference app:key="accessibility_access" app:persistent="false" app:title="@string/pref_accessibility_title"/>
    </PreferenceCategory>
    <PreferenceCategory app:key="category_about">
        <Preference app:key="about" app:persistent="false" app:title="@string/pref_about_title"/>
    </PreferenceCategory>
</PreferenceScreen>
