<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:key="category_display_adjust" app:title="@string/pref_advanced_display_category">
        <SwitchPreferenceCompat app:defaultValue="false" app:key="self_draw" app:persistent="true" app:summary="@string/pref_self_draw_summary" app:title="@string/pref_self_draw_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:key="nav_fixed_size" app:persistent="true" app:summary="@string/pref_nav_fixed_size_summary" app:title="@string/pref_nav_fixed_size_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:key="vd_width_gap_enabled" app:persistent="true" app:summary="@string/pref_vd_width_gap_switch_summary" app:title="@string/pref_vd_width_gap_switch_title"/>
        <EditTextPreference app:dependency="vd_width_gap_enabled" app:dialogTitle="@string/pref_vd_width_gap_value_title" app:key="vd_width_gap" app:persistent="true" app:title="@string/pref_vd_width_gap_value_title" app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:key="vd_height_gap_enabled" app:persistent="true" app:summary="@string/pref_vd_height_gap_switch_summary" app:title="@string/pref_vd_height_gap_switch_title"/>
        <EditTextPreference app:dependency="vd_height_gap_enabled" app:dialogTitle="@string/pref_vd_height_gap_value_title" app:key="vd_height_gap" app:persistent="true" app:title="@string/pref_vd_height_gap_value_title" app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory app:key="category_mapstrip_buttons" app:title="@string/pref_mapstrip_category">
        <SwitchPreferenceCompat app:defaultValue="true" app:icon="@drawable/car_text_vertical_margin" app:key="map_action_force_landscape" app:persistent="true" app:summary="@string/pref_mapstrip_force_landscape_summary" app:title="@string/pref_mapstrip_force_landscape_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:icon="@drawable/car_standard_small_size" app:key="map_action_auto_dim" app:persistent="true" app:summary="@string/pref_mapstrip_auto_dim_summary" app:title="@string/pref_mapstrip_auto_dim_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:icon="@drawable/car_standard_width" app:key="map_action_back" app:persistent="true" app:summary="@string/pref_mapstrip_back_summary" app:title="@string/pref_mapstrip_back_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:icon="@drawable/car_toast_horizontal_padding" app:key="map_action_home" app:persistent="true" app:summary="@string/pref_mapstrip_home_summary" app:title="@string/pref_mapstrip_home_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:icon="@drawable/car_toast_padding" app:key="map_action_recents" app:persistent="true" app:summary="@string/pref_mapstrip_recents_summary" app:title="@string/pref_mapstrip_recents_title"/>
    </PreferenceCategory>
    <PreferenceCategory app:key="category_button_placement" app:summary="@string/pref_placement_category_summary" app:title="@string/pref_placement_category">
        <SwitchPreferenceCompat app:defaultValue="false" app:key="legacy_buttons_left" app:persistent="true" app:summary="@string/pref_legacy_buttons_left_summary" app:title="@string/pref_legacy_buttons_left_title"/>
        <SwitchPreferenceCompat app:defaultValue="false" app:key="legacy_buttons_dodge_nav" app:persistent="true" app:summary="@string/pref_legacy_dodge_nav_summary" app:title="@string/pref_legacy_dodge_nav_title"/>
    </PreferenceCategory>
</PreferenceScreen>
