<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingTop="24dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="64dp" android:layout_height="64dp" android:src="@mipmap/ic_launcher" android:contentDescription="@null"/>
        <TextView android:textAppearance="?attr/textAppearanceHeadline6" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/app_name"/>
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:textColor="?android:attr/textColorSecondary" android:layout_gravity="center_horizontal" android:id="@+id/about_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"/>
        <TextView android:textAppearance="?attr/textAppearanceCaption" android:textColor="?android:attr/textColorSecondary" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/about_author"/>
    </LinearLayout>
    <View android:background="?attr/dividerHorizontal" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="20dp"/>
    <TextView android:textAppearance="?attr/textAppearanceBody1" android:textColor="?attr/colorPrimary" android:id="@+id/about_github" android:background="?attr/selectableItemBackground" android:paddingTop="14dp" android:paddingBottom="14dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_link_github" android:paddingStart="24dp" android:paddingEnd="24dp"/>
    <TextView android:textAppearance="?attr/textAppearanceBody1" android:textColor="?attr/colorPrimary" android:id="@+id/about_donate_paypal" android:background="?attr/selectableItemBackground" android:paddingTop="14dp" android:paddingBottom="14dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_link_donate_paypal" android:paddingStart="24dp" android:paddingEnd="24dp"/>
    <TextView android:textAppearance="?attr/textAppearanceBody1" android:textColor="?attr/colorPrimary" android:id="@+id/about_donate_bubbletea" android:background="?attr/selectableItemBackground" android:paddingTop="14dp" android:paddingBottom="14dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_link_donate_bubbletea" android:paddingStart="24dp" android:paddingEnd="24dp"/>
</LinearLayout>
