<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="ltr">
    <SurfaceView android:id="@+id/projection_surface_view" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <idv.lzn.screenonauto.projection.PassThroughColumn android:gravity="end" android:layout_gravity="end|bottom" android:orientation="vertical" android:id="@+id/toggle_column" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp">
        <ImageView android:id="@+id/force_landscape_button" android:background="@drawable/car_card_bottom_margin" android:padding="16dp" android:focusable="true" android:clickable="true" android:layout_width="64dp" android:layout_height="64dp" android:scaleType="fitCenter"/>
        <ImageView android:id="@+id/auto_dim_button" android:background="@drawable/car_card_bottom_margin" android:padding="16dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:scaleType="fitCenter"/>
        <ImageView android:id="@+id/back_button" android:background="@drawable/car_card_bottom_margin" android:padding="16dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:src="@drawable/car_icon" android:scaleType="fitCenter" android:contentDescription="@string/action_back"/>
        <ImageView android:id="@+id/home_button" android:background="@drawable/car_card_bottom_margin" android:padding="16dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:src="@drawable/car_max_drawer_width" android:scaleType="fitCenter" android:contentDescription="@string/action_home"/>
        <ImageView android:id="@+id/recents_button" android:background="@drawable/car_card_bottom_margin" android:padding="16dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:src="@drawable/car_touch_feedback_radius" android:scaleType="fitCenter" android:contentDescription="@string/action_recents"/>
    </idv.lzn.screenonauto.projection.PassThroughColumn>
    <idv.lzn.screenonauto.projection.PassThroughScroll android:layout_gravity="end|top" android:id="@+id/shortcut_bar_scroll" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp">
        <LinearLayout android:orientation="horizontal" android:id="@+id/shortcut_bar" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </idv.lzn.screenonauto.projection.PassThroughScroll>
</FrameLayout>
